2002-05-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (determine_format): Bugfix: correctly
	determine latex input.

	* stepmake/bin/install-sh: Include latest from libtool.

	* stepmake/configure: 
	* configure: Regenerate.

	* config.make.in: Remove dead variables.  Add OPTIONAL/REQUIRED lists.
	(USER_CFLAGS): Bugfix, include CPPFLAGS.

	* configure.in: Use new OPTIONAL/REQUIRED mechanism.

	* stepmake/aclocal.m4: Add mechanism for checking OPTIONAL or
	REQUIRED programs and version.  Try to continue configuring, list
	missing programs at the end, but don't generate a GNUmakefile if
	REQUIRED programs are missing.  Cleanups, junk obsolete stuff.
	Fix Cygwin detection, drop '32' suffix.  Hoping this is not too
	fancy for some older systems.

2002-05-16  Han-Wen  <hanwen@cs.uu.nl>

	* lily/score-engraver.cc (typeset_all): sanity check for items
	that are Y parent to spanner. 

	* lily/piano-pedal-engraver.cc (create_bracket_grobs): fix broken
	pedal spanners.

2002-05-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc: remove as many iostream use as possible. 

	* flower/ : remove text-db, text-stream, data-file.
	
2002-05-15  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py: add --no-music option: strip all blocks.
	(completize_preamble): don't barf if no preamble present.
	(do_file): allow extensions on --output

	* scripts/ly2dvi.py (make_preview): make automatic preview of
	first system. Small cleanups.

2002-05-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (make_pixmap): output png directly.

	* mf/GNUmakefile (INSTALLATION_OUT_FILES4): create and install
	fonts.dir file.

	* lily/parser.yy (My_lily_parser): uncomment code. (Causes
	problems  with recent bison releases).

	* make/lilypond.redhat.spec.in: add pfa fonts to X. 

2002-05-07  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Fixes the order of the note name list.

2002-05-06  Jan Nieuwenhuizen  <janneke@gnu.org>
