@@ -1,3 +1,7 @@
+2002-05-16  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
+
+	* scripts/lilypond-book.py: Don't import pre for Python >= 2.2
+
 2002-05-16  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/lilypond-book.py (determine_format): Bugfix: correctly
